bump bwc version to 2.8.0 (#659)
* Bump bwc version to 2.8.0
Signed-off-by: Hailong Cui <ihailong@amazon.com>

* Update deb arch to all

Signed-off-by: Hailong Cui <ihailong@amazon.com>

* remove dashboard related

Signed-off-by: Hailong Cui <ihailong@amazon.com>

---------

Signed-off-by: Hailong Cui <ihailong@amazon.com>